Fixing spacing at the bottom

--- a/mystyle.css
+++ b/mystyle.css
@@ -61,5 +61,5 @@ th.word-column {
 }
 
 .footer-space {
-	padding-bottom: 500px;
+	padding-bottom: 50px;
 }
